# shipwright-ai-agent-challenge

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  agent.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md  MCP_SPIKE.md  ROADMAP.md
docs/adr/: 0001-mcp-integration-boundary.md
shipwright/: __init__.py  adk_app.py  contracts.py  demo.py  evaluation.py  mcp.py  mcp_live.py  mcp_probe.py  mcp_server.py  memory.py  observability.py  reasoning.py  seed_data.py  server.py  services.py
tests/: test_mcp_contracts.py  test_reasoning.py  test_shipwright.py
